--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>BSD專屬精算核心 - 視覺友善及葵花寶典加強版</title>
+    <title>BSD專屬精算核心 - 葵花寶典加強版</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
     <script src="https://cdn.sheetjs.com/xlsx-0.19.3/package/dist/xlsx.full.min.js"></script>
 
@@ -343,7 +343,7 @@
                     
                     <div style="margin-top:15px;"></div>
 
-                    <div class="input-group"><label>建議售價 MSRP</label><input type="number" id="MSRP" placeholder="可輸入車輛原始售價" oninput="updateUI()"></div>
+                    <div class="input-group"><label>建議售價 </label><input type="number" id="MSRP" placeholder="可輸入車輛原始售價" oninput="updateUI()"></div>
                     <div class="input-group"><label>分期本金 <span class="req">*</span></label><input type="number" id="B20" placeholder="請輸入分期本金" oninput="updateUI()"></div>
                     <div class="input-group"><label>牌價利率 % <span class="req">*</span></label><input type="number" id="B4" step="0.01" placeholder="請輸入牌價利率" oninput="syncRate()"></div>
                     
@@ -387,7 +387,7 @@
             <div class="content" id="print-area">
                 <div class="dashboard">
                     <div class="dash-row">
-                        <div class="dash-item" id="msrp-dash" style="display:none;"><div class="dash-label">建議售價 MSRP</div><div class="dash-val" id="d-msrp">0</div></div>
+                        <div class="dash-item" id="msrp-dash" style="display:none;"><div class="dash-label">建議售價</div><div class="dash-val" id="d-msrp">0</div></div>
                         <div class="dash-item"><div class="dash-label">分期本金</div><div class="dash-val" id="d-pv">0</div></div>
                         <div class="dash-item"><div class="dash-label">客戶實際利率 (IRR)</div><div class="dash-val" id="d-crate">-- %</div></div>
                         <div class="dash-item"><div class="dash-label">分期總期數</div><div class="dash-val" id="d-terms">0</div></div>
@@ -1190,7 +1190,7 @@
 
         renderMSRP: function() {
             const html = `
-                <div class="c-title">建議售價 (MSRP)</div>
+                <div class="c-title">建議售價</div>
                 <div class="c-subtitle">非必填，僅供參考</div>
                 <input type="number" id="inp-msrp" class="c-input" placeholder="請輸入金額" value="${this.data.msrp}" onkeydown="if(event.key==='Enter') ComfortMode.saveMSRP()">
                 <button class="c-btn-submit" onclick="ComfortMode.saveMSRP()">送出 / 略過</button>
